// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyStocks component tests should match snapshot 1`] = `
<input
  className="date-input"
  data-testid="chart-date-input"
  type="date"
/>
`;

exports[`CurrencyStocks component tests snapshot matches 1`] = `
<DocumentFragment>
  <input
    class="date-input"
    data-testid="chart-date-input"
    type="date"
  />
</DocumentFragment>
`;
